# SIM-Travels

./: .gitignore  README.md  _config.yml  render.yaml  sample_api_calls.ipynb
adk-a2a-chatbot/: .env.example  README.md  pyproject.toml  requirements.txt
adk-a2a-chatbot/customer_support_agent/: agent.py  airport_transfer_offers_agent.evalset.json  faq_booking_retrieval.evalset.json  flight_offers_agent.evalset.json  hotel_offers_agent.evalset.json  prompts.py  trip_planning_agent.evalset.json
adk-a2a-chatbot/customer_support_agent/.adk/eval_history/: customer_support_agent_airport_transfer_offers_agent_1754829771.4756048.evalset_result.json  customer_support_agent_flight_offers_agent_1754772819.4978154.evalset_result.json  customer_support_agent_flight_offers_agent_1754822530.5448017.evalset_result.json  customer_support_agent_flight_offers_agent_1754829544.1367044.evalset_result.json
adk-a2a-chatbot/customer_support_agent/tools/: tools.py
adk-a2a-chatbot/remote_a2a/flight_offers_agent/: agent.json  agent.py  prompts.py
adk-a2a-chatbot/remote_a2a/hotel_offers_agent/: agent.json  agent.py  prompts.py
adk-a2a-chatbot/remote_a2a/transfer_offers_agent/: agent.json  agent.py  prompts.py
adk-chatbot/: README.md  pyproject.toml  requirements.txt
adk-chatbot/customer_support_agent/: .env.example  agent.py  memory_callbacks.py  prompts.py
adk-chatbot/flight_offers_agent/: .env.example  __main__.py  agent.py  agent_executor.py
admin-faq-panel/: Dockerfile  compose.yaml  composer.json
cronjob-scripts/: flight_offers.py  flight_offers_config.json  requirements.txt  sample.json
experiments/: adk_playground_notebook.ipynb
fastapi-sunshine-conversations/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  sampleRequestBody.json  test.py  update.py
fastmcp-server/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py  test.py  tools.py
mcp-server/: .env.example  main.py  pyproject.toml
mcp-toolbox/: tools.yaml
mysql-db/: load_data.sql
php-admin-panel/: .env.example  README.md
react-website/: README.md  index.html  package-lock.json  package.json  render.yaml
(+88 files in other folders)
