[project]
name = "fastapi-sunshine-conversations"
version = "0.1.0"
description = "FastAPI Server that listens for Zendesk Webhook Events and passes them into our chatbot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "requests>=2.32.4",
    "sunshine-conversations-client>=15.5.2",
]
