[project]
name = "amadeus-fastmcp-server"
version = "0.1.0"
description = "MCP Toolsets for Amadeus Flight, Hotel and Airport Transfer Offers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amadeus>=12.0.0",
    "dotenv>=0.9.9",
    "fastmcp>=2.10.2",
    "requests>=2.32.4",
]
