[project]
name = "amadeus-fastmcp-server"
version = "0.1.0"
description = "A Python FastMCP server that provides a set of tools for searching flights, hotels, and airport transfers using the Amadeus API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amadeus>=12.0.0",
    "dotenv>=0.9.9",
    "fastmcp>=2.10.2",
    "requests>=2.32.4",
]
